--- a/web/cerrarsesion.xhtml
+++ b/web/cerrarsesion.xhtml
@@ -1,10 +1,19 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ice="http://www.icesoft.com/icefaces/component"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
     <body>
         <ui:composition template="./WEB-INF/facelets/templates/plantillalogueado.xhtml">
-            <ui:define name="sesion">#{login.cerrarSesion()}#{facesContext.externalContext.redirect("index.xhtml")}</ui:define>
+            <ui:define name="sesion">
+                
+                    #{login.cerrarSesion()}
+                    #{facesContext.externalContext.redirect("index.xhtml")}
+                
+
+            </ui:define>
             <ui:define name="title">Cerrar sesión - CreativeMeetings</ui:define>
             <ui:define name="logoempresa"></ui:define>
             <ui:define name="left"></ui:define>
